samples/_failures_safe/1761324204_e2b86c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5dd97e0.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_d5dd97e0.c:149:25: error: expected declaration or statement at end of input
  149 |                         }
      |                         ^
./samples/SAFE/__tmp_d5dd97e0.c:149:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d5dd97e0.c:149:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d5dd97e0.c:149:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d5dd97e0.c:149:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d5dd97e0.c:149:25: error: expected declaration or statement at end of input
